# AdaptiveIPFilter

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  channel.cpp  coder.py  config.cpp  config.h  ethernet_socket.cpp  ethernet_socket.h  filter.cpp  genconf.py  iptables.cpp  iptables.h  main.cpp  main.py  makefile  nfq_packet.cpp  nfq_packet.h  nfqueue.cpp  nfqueue.h  packet.cpp  packet.h  packet_filter.cpp  packet_filter.h  probability.py  raw_socket.cpp  raw_socket.h  ring_buffer.h
src/bindings/: __init__.py  libnetfilter_queue.py
